Fixed textbox overflow issues

--- a/styles.css
+++ b/styles.css
@@ -58,15 +58,15 @@ h2 {
     height:100%;
 	line-height: 150%;
 	padding: 0em 1em 1em 1em;
-    border: solid 1px #888;
+    border: solid 1px #CCCCCC;
     font-family: 'Noto Sans Telugu', sans-serif;
+	padding: 10px;
 }
 
 #text {
     height: 700px;
     width: 780px;
     border-radius: 15px;
-    /*border: solid;*/
     padding: 3px 3px 3px 3px;
     float: left;
 }
@@ -82,8 +82,8 @@ h2 {
 }
 
 #main {
-    padding: 10px 0px 0px 10px
-    overflow: auto;
+    padding: 20px 0px 0px 10px;
+    /* overflow: auto; */
 }
 
 a.hotspot {
@@ -122,7 +122,7 @@ div.clear {
 }
 
 #bottom {
-    margin: 10px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
 }
 
 div.letter {
